fix img urls, better formatting

--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -14,7 +14,7 @@
           <h1>Blog details</h1>
           <nav aria-label="breadcrumb" class="banner-breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href={% url 'index' %}>Home</a></li>
               <li class="breadcrumb-item active" aria-current="page">Blog Details</li>
             </ol>
           </nav>
@@ -34,7 +34,7 @@
         <div class="col-lg-8">
           <div class="main_blog_details">
             {% if post.image_url %}
-              <img class="img-fluid" src={% static post.image_url %} alt="Post image">
+              <img class="img-fluid" src={{ post.image_url }} alt="Post image">
             {% else %}
               <img class="img-fluid" src={% static "img/banner/blog.png" %} alt="Post image">
             {% endif %}
@@ -126,6 +126,4 @@
       </div>
     </div>
   </section>
-  <!--================ End Blog Post Area =================-->
-
 {% endblock %}
